feat(ogc-api): remove xml format for ogc-api